@@ -1,24 +1,20 @@
 # TODO: specs could be better: write better examples, with descriptive names 
 # rather than 'first', 'second' etc...
-class TestController < ActionController::Base
+class InheritViewsTestController < ActionController::Base
   self.view_paths = [File.dirname(__FILE__) + '/fixtures/views']
-  
-  # we're pretending that these controllers are not modulized
-  def self.controller_path
-    controller_name
-  end
 end
 
-class FirstController < TestController
+class FirstController < InheritViewsTestController
   inherit_views
 
   def in_first; end
   def in_first_and_second; end
   def in_all; end
   def render_parent; end
+  def inherited_template_path; end
 end
 
-class SecondController < TestController
+class SecondController < InheritViewsTestController
   inherit_views 'first'
 
   def in_first; end
@@ -26,6 +22,7 @@ class SecondController < TestController
   def in_second; end
   def in_all; end
   def render_parent; end
+  def bad_render_parent; end
 end
 
 class ThirdController < SecondController
@@ -41,7 +38,7 @@ end
 # These are created in production mode to test caching
 ENV["RAILS_ENV"] = 'production'
 
-class ProductionModeController < TestController
+class ProductionModeController < InheritViewsTestController
   inherit_views
 end
 
