@@ -1,10 +1,8 @@
 require File.expand_path(File.join(File.dirname(__FILE__), '../spec_helper'))
 require File.expand_path(File.join(File.dirname(__FILE__), '../app'))
 
-describe SecondController, " class (a controller with: inherit_views 'first')" do
-  it "should inherit_views" do
-    SecondController.should be_inherit_views
-  end
+describe SecondController, " < TestController; inherit_views 'first'" do
+  it { SecondController.should be_inherit_views }
 
   it "should have inherit view paths == ['second', 'first']" do
     SecondController.inherit_view_paths.should == ['second', 'first']
@@ -12,57 +10,40 @@ describe SecondController, " class (a controller with: inherit_views 'first')" d
 end
 
 describe SecondController do
-  it "should inherit_views" do
-    @controller.should be_inherit_views
-  end
+  integrate_views
+  
+  it { @controller.should be_inherit_views }
 
   it "should have inherit view paths == ['second', 'first']" do
     @controller.inherit_view_paths.should == ['second', 'first']
   end
-end
-
-describe SecondController, " actions" do
-  integrate_views
-
-  it "should render first/in_first when GETing :in_first" do
-    @controller.should_receive(:render_for_file_without_inherit_views).with('first/in_first', nil, true, {})
+  
+  it "GET :in_first should render first/in_first" do
     get :in_first
+    response.body.should == 'first:in_first'
   end
-
-  it "should render second/in_second when GETing :in_second" do
-    @controller.should_receive(:render_for_file_without_inherit_views).with('second/in_second', nil, true, {})
+  
+  it "GET :in_first_and_second should render second/in_first_and_second" do
+    get :in_first_and_second
+    response.body.should == 'second:in_first_and_second'
+  end
+  
+  it "GET :in_second should render second/in_second" do
     get :in_second
-  end
-end
-
-describe SecondController, " views" do
-  before do
-    @view = ActionView::Base.new(@controller.view_paths, {}, @controller)
-    @controller.instance_variable_set('@template', @view)
-    @view.stub!(:template_format).and_return(:html)
+    response.body.should == 'second:in_second'
   end
 
-  it "should render contents of 'first/in_first' when rendering 'second/in_first" do
-    @view.render(:file => 'second/in_first').should == '<first />'
-  end 
-
-  it "should render contents of 'second/in_first_and_second' when rendering 'second/in_first_and_second" do
-    @view.render(:file => 'second/in_first_and_second').should == '<second />'
+  it "GET :in_all should render second/in_all" do
+    get :in_all
+    response.body.should == 'second:in_all'
   end
 
-  it "should render contents of 'second/in_all' when rendering 'second/in_all" do
-    @view.render(:file => 'second/in_all').should == '<second />'
+  it "GET :render_parent should render first/render_parent inside second/render_parent" do
+    get :render_parent
+    response.body.should == "first:render_parent\nsecond:render_parent"
   end
-
-  it "should render parent views when <%= render_parent %> is in the view" do
-    @view.render(:file => 'second/render_parent').should == "<first />\n<second />"
-  end
-
-  it "should raise error when rendering third/in_second, as 'third' is not in inherit_view_paths" do
-    lambda { @view.render(:file => 'third/in_second')}.should raise_error(::ActionView::ActionViewError)
-  end
-
-  it "should raise error when rendering second/not_there, as the file 'not_there' is not present" do
-    lambda { @view.render(:file => 'second/not_there')}.should raise_error(::ActionView::ActionViewError)
+  
+  it "GET :bad_render_parent should raise ActionView::TemplateError as there is no parent to render" do
+    lambda { get :bad_render_parent }.should raise_error(ActionView::TemplateError, "no parent for second/bad_render_parent found")
   end
 end
