@@ -1,0 +1,1 @@
+<%= inherited_template_path "second/in_first_and_second", SecondController %>
