@@ -1,2 +1,2 @@
 <%= render_parent %>
-<third />
+second:render_parent
