@@ -1,2 +1,2 @@
 <%= render_parent %>
-<second />
+third:render_parent
